# eth-signature-verifier

./: Cargo.toml  LICENSE  README.md  build.rs  devloop.sh
.github/: ci.yml  rust.yml
.github/workflows/: ci.yaml
contracts/: DeployedSmartWalletAbi.json  Erc1271Mock.sol  Erc6942.sol
src/: lib.rs  passkey_smart_wallet_helper.rs  test_helpers.rs
