[package]
name = "sig_verifier"
version = "0.1.0"
edition = "2021"
authors = ["danielw1534@gmail.com"]
license = "MIT"

[dependencies]
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7" }
alloy-primitives = { version = "0.7.0" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7" }
alloy-sol-types = { version = "0.7.0", features=["std"] }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy.git" }
alloy-dyn-abi = { version = "0.7.0" , features=["std", "eip712"] }
alloy-signer-local = {git = "https://github.com/alloy-rs/alloy.git"}
k256 = "0.13"
log = "0.4"
thiserror = "1.0.63"
byteorder = "1.4"
zerocopy = "0.3"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
# eip-712 = "0.1.1"
ethabi = "18.0.0"
ethereum-types = "0.14.1"
itertools = "0.10.0"
indexmap = "1.7.0"
rustc-hex = "2.1.0"
validator = "0.12.0"

[dev-dependencies]
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7" }
k256 = "0.13"
rand = "0.8"
env_logger = "0.10"
regex = "1"
tokio = { version = "1", features = ["test-util", "macros", "process"] }
serial_test = "0.5.1"

[build-dependencies]
alloy-primitives = { version = "0.7.0" }
serde_json = "1"

[features]
eip712 = ["alloy-signer/eip712"]